chore: formatted -> String.format 변경